bugs fixed in jump list

--- a/src/components/DateRangeSort/styles.module.scss
+++ b/src/components/DateRangeSort/styles.module.scss
@@ -1,5 +1,8 @@
 .sortSelector {
   width: 230px;
+  @media (max-width: 768px) {
+    width: 80px;
+  }
   .sortButton {
     background-color: #ffffff;
     align-items: center;
